...

        <ImageButton
            android:id="@+id/ibtBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
...

                <Spinner
                    android:id="@+id/sOfferFilterSort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvOfferFilterDateMin"
                    android:layout_width="276dp"
                    android:layout_height="40dp"
...

                <TextView
                    android:id="@+id/tvOfferFilterDateMax"
                    android:layout_width="276dp"
                    android:layout_height="40dp"
...

                <EditText
                    android:id="@+id/etOfferFilterPriceMin"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
...
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvOfferFilterPrice"
                    app:layout_constraintEnd_toStartOf="@+id/etOfferFilterPriceMax"
                    app:layout_constraintTop_toTopOf="@+id/tvOfferFilterPrice" />

...

                <EditText
                    android:id="@+id/etOfferFilterDistanceMin"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
...
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvOfferFilterDistance"
                    app:layout_constraintEnd_toStartOf="@+id/etOfferFilterDistanceMax"
                    app:layout_constraintTop_toTopOf="@+id/tvOfferFilterDistance" />

...

                <EditText
                    android:id="@+id/etOfferFilterParticipantsMin"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
...
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvOfferFilterParticipants"
                    app:layout_constraintEnd_toStartOf="@+id/etOfferFilterParticipantsMax"
                    app:layout_constraintTop_toTopOf="@+id/tvOfferFilterParticipants" />

...

                <EditText
                    android:id="@+id/etOfferFilterRatingMin"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
...
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvOfferFilterRating"
                    app:layout_constraintEnd_toStartOf="@+id/etOfferFilterRatingMax"
                    app:layout_constraintTop_toTopOf="@+id/tvOfferFilterRating" />

...

                <Button
                    android:id="@+id/btOfferFilterSave"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
...
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btOfferFilterReset"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
...
