<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="on_back_pressed_message">Press back again to leave.</string>
    <string name="invalid_date_time_interval">Time interval invalid.</string>
    <string name="missing_date_time">Time cannot be empty.</string>
    <string name="sort_spinner_item_time">Time until meeting</string>
    <string name="invalid_date_time_past">Time specification lies is in the past.</string>
    <string name="date_time">Time</string>
    <string name="report_message">Why do you want to report the user or the offer?</string>
    <string name="publish">Publish</string>
...
    <string name="bad_email">Invalid e-mail.</string>
    <string name="invalid_max_participants">Invalid number of participants.</string>
    <string name="bad_login">Invalid credentials.</string>
    <string name="date_format">DD.MM.YYYY</string>
    <string name="missing_title">Title must not be empty.</string>
    <string name="phone_number">Phone number</string>
    <string name="invalid_participants_interval">Invalid participant interval.</string>
    <string name="missing_participants">Participant field must not be empty.</string>
    <string name="max_participants_to_low">Already more participants than the new maximum value.</string>
    <string name="participants">Participants</string>
    <string name="participate">Participate</string>
    <string name="standard">Standard</string>
    <string name="city">City</string>
...
    <string name="contact_accept">Send</string>
    <string name="register">Register</string>
    <string name="delete_profile">Delete profile</string>
    <string name="profile_edit_success">Profile successfully processed.</string>
    <string name="profile_description">Profile description</string>
    <string name="drawer_menu_profile">Profile</string>
    <string name="invalid_price_interval">Price interval invalid.</string>
    <string name="missing_price">Price must not be empty.</string>
    <string name="price">Price</string>
    <string name="sort_spinner_item_price">Price</string>
    <string name="reset_password">Forgot password?</string>
    <string name="invalid_password">Password incorrect.</string>
    <string name="password_changed">Password changed successfully.</string>
...
    <string name="missing_location">Place must not be empty.</string>
    <string name="new_password">New password</string>
    <string name="delete_profile_info">Do you really want to delete your profile? Your information will be deleted and cannot be restored. Please confirm your request with your password.</string>
    <string name="minutes">minutes</string>
    <string name="min">min</string>
    <string name="report">Report</string>
    <string name="drawer_menu_my_offers">My Offers</string>
    <string name="max">max</string>
    <string name="delete_offer">Delete</string>
    <string name="contact">Contact</string>
    <string name="contactRequest">Contact request</string>
    <string name="distance_unit">km</string>
    <string name="bright">Bright</string>
...
    <string name="guest_rating">Guest rating</string>
    <string name="date_time_min">earliest</string>
    <string name="filter_and_sort">Filter and sort</string>
    <string name="filter">Filter</string>
    <string name="toast_error_message">An error has occurred.</string>
    <string name="notification_hint">Receive a notification before each meeting you participate in.</string>
    <string name="invalid_distance_interval">Distance interval invalid.</string>
    <string name="distance">Distance</string>
    <string name="sort_spinner_item_distance">Distance</string>
    <string name="settings">Settings</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="about">Some buttons have been disabled and thus been grayed out. They are for presentation purposes only and represent functions that are not yet implemented.</string>
    <string name="dark">Dark</string>
    <string name="participating">You\'re already participating.</string>
    <string name="contact_text">A user asks for your contact details. Choose if you want to send him your contact details and if so, which ones.</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="missing_date">Date must not be empty.</string>
    <string name="appearance">Appearance</string>
    <string name="invalid_rating_interval">Rating interval invalid.</string>
    <string name="rating">Rating</string>
    <string name="rate">Rate</string>
    <string name="missing_description">Description must not be empty.</string>
    <string name="missing_username">Username must not be empty.</string>
    <string name="username">Username</string>
    <string name="contact_info">User</string>
...
