...
                android:tint="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/content_description_add_offer_button" />

            <ImageButton
                android:id="@+id/ibtOfferListFilter"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:adjustViewBounds="true"
                android:background="@drawable/bg_button"
                android:elevation="5dp"
...
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srlOfferListSwipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOfferList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:elevation="3dp"
                android:paddingBottom="90dp" />

...
