...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvProfileGuestRating"
                    app:tint="@color/rating"
                    android:contentDescription="@string/content_description_profile_guest_rating_star" />

                <Button
                    android:id="@+id/btProfileSubscribe"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_button"
                    android:elevation="5dp"
                    android:text="@string/subscribe"
...
